--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_PATH=. node $NODE_DEBUG_OPTION ./bin/www"
+    "start": "NODE_PATH=. node $NODE_DEBUG_OPTION --use_strict ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
