--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "morgan": "~1.7.0",
     "redis": "^2.6.2",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.9.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.3.1",
+    "eslint-plugin-standard": "^2.0.1"
   }
 }
