--- a/.env-sample
+++ b/.env-sample
@@ -4,5 +4,9 @@ MONGO_URL="mongodb://localhost:27017/mcs"
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_TTL=1
 
 OMDB_URL=http://www.omdbapi.com/
+
+# action classes support promises or generators
+GENERATORS=true
