--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
+    "co": "^4.6.0",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
-    "jade": "~1.11.0",
     "mongodb": "^2.2.11",
     "morgan": "~1.7.0",
-    "redis": "^2.6.2",
-    "serve-favicon": "~2.3.0"
+    "redis": "^2.6.2"
   },
   "devDependencies": {
     "eslint": "^3.9.1",
