--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "~4.13.4",
     "mongodb": "^2.2.11",
     "morgan": "~1.7.0",
-    "redis": "^2.6.2"
+    "redis": "^2.6.2",
+    "winston": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^3.9.1",
